--- a/index.html
+++ b/index.html
@@ -28,39 +28,37 @@
       </section>
 
       <section id="recommended-products">
-        <h1 style="color: darkblue; font-family: Arial">
+        <h1>
           Recommended Products
         </h1>
 
         <div class="product">
           <img
             src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
-            style="width: 100px"
             alt=""
           />
-          <h2 style="font-size: 18px">
+          <h2>
             Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
           </h2>
-          <p style="font-size: 12px">
+          <p>
             Your perfect pack for everyday use and walks in the forest. Stash
             your laptop (up to 15 inches) in the padded sleeve, your everyday
           </p>
-          <p>Price: <span style="color: green">$109.95</span></p>
-          <p style="font-family: Verdana">Rating: 3.9 (120 reviews)</p>
+          <p>Price: $109.95</p>
+          <p>Rating: 3.9 (120 reviews)</p>
         </div>
 
         <div class="product">
           <img
             src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
-            style="width: 200px"
             alt=""
           />
-          <h2 style="font-size: 20px; font-family: Georgia">
+          <h2>
             Mens Casual Premium Slim Fit T-Shirts
           </h2>
           <p>Slim-fitting style, contrast raglan long sleeve...</p>
-          <p style="color: purple">Price: $22.3</p>
-          <p style="font-size: 14px">Rating: 4.1 (259 reviews)</p>
+          <p>Price: $22.3</p>
+          <p>Rating: 4.1 (259 reviews)</p>
         </div>
 
         <div class="product">
@@ -68,60 +66,58 @@
             src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"
             alt="Mens Cotton Jacket"
           />
-          <h2 style="font-family: 'Times New Roman'">Mens Cotton Jacket</h2>
-          <p style="font-size: 10px">
+          <h2>Mens Cotton Jacket</h2>
+          <p>
             Great outerwear jackets for Spring/Autumn/Winter...
           </p>
           <p>Price: $55.99</p>
-          <p style="color: red">Rating: 4.7 (500 reviews)</p>
+          <p>Rating: 4.7 (500 reviews)</p>
         </div>
 
         <div class="product">
           <img
             src="https://fakestoreapi.com/img/71YXzeOuslL._AC_UY879_.jpg"
-            style="width: 150px"
             alt=""
           />
-          <h2 style="font-size: 22px; color: orange">Mens Casual Slim Fit</h2>
-          <p style="font-style: italic">
+          <h2>Mens Casual Slim Fit</h2>
+          <p>
             The color could be slightly different...
           </p>
-          <p style="font-size: 16px; color: brown">Price: $15.99</p>
+          <p>Price: $15.99</p>
           <p>Rating: 2.1 (430 reviews)</p>
         </div>
 
         <div class="product">
           <img
             src="https://fakestoreapi.com/img/71pWzhdJNwL._AC_UL640_QL65_ML3_.jpg"
-            style="width: 250px"
             alt=""
           />
-          <h2 style="font-size: 24px; font-weight: bold; color: gold">
+          <h2>
             John Hardy Women's Legends Naga Bracelet
           </h2>
-          <p style="font-size: 18px">
+          <p>
             From our Legends Collection, the Naga was inspired by the mythical
             water dragon...
           </p>
-          <p style="color: pink">Price: $695</p>
+          <p>Price: $695</p>
           <p>Rating: 4.6 (400 reviews)</p>
         </div>
       </section>
 
-      <section id="faq" style="background-color: #eee; padding: 20px">
-        <h2 style="font-size: 28px; text-align: center; color: navy">
+      <section id="faq">
+        <h2>
           Frequently Asked Questions
         </h2>
-        <div style="margin: 10px">
-          <h3 style="color: green">1. What is the return policy?</h3>
-          <p style="font-size: 14px; font-family: Arial">
+        <div>
+          <h3>1. What is the return policy?</h3>
+          <p>
             We offer a 30-day return policy. Please ensure the item is in its
             original condition.
           </p>
         </div>
 
-        <div style="margin: 15px">
-          <h3 style="color: blue; font-family: Georgia">
+        <div>
+          <h3>
             2. How long does shipping take?
           </h3>
           <p>
@@ -130,28 +126,28 @@
           </p>
         </div>
 
-        <div style="margin: 5px">
-          <h3 style="font-weight: bold">
+        <div>
+          <h3>
             3. Do you offer international shipping?
           </h3>
-          <p style="font-style: italic">
+          <p>
             Yes, we ship internationally. Additional charges may apply.
           </p>
         </div>
 
-        <div style="margin: 20px">
-          <h3 style="font-size: 18px">4. Can I track my order?</h3>
-          <p style="font-size: 12px; color: gray">
+        <div>
+          <h3>4. Can I track my order?</h3>
+          <p>
             Yes, tracking information will be provided via email once your order
             is shipped.
           </p>
         </div>
 
-        <div style="margin: 8px">
-          <h3 style="color: red">5. How can I contact customer support?</h3>
+        <div>
+          <h3>5. How can I contact customer support?</h3>
           <p>
             You can reach us at
-            <a href="mailto:support@example.com" style="color: orange"
+            <a href="mailto:support@example.com"
               >support@example.com</a
             >.
           </p>
