--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inconsistent Product Page</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Product Page</title>
+    <link rel="stylesheet" href="src/style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
