--- a/index.html
+++ b/index.html
@@ -3,30 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Page</title>
+    <title>Inconsistent Product Page</title>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="src/css/navbar.css"/>
     <script src="script.js" defer></script>
   </head>
   <body>
-    <header>
-      <div>Nozama</div>
+    <header class="topNav">
+      <img class="logo" src="src/logo.png" alt="Nozama Logo">
+      <nav class="navbar">
+        <div class="navbar-items">
+          <a href="/electronics">Electronics</a>
+          <a href="/jewellery">Jewellery</a>
+          <a href="/clothing">clothing</a>
+        </div>
+      </nav>
     </header>
-    <main>
-      <section id="hero">
-        <div>
-          <p>Electronics</p>
-          <a href="/electronics">Shop now</a>
-        </div>
-        <div>
-          <p>Jewellery</p>
-          <a href="/jewellery">Shop now</a>
-        </div>
-        <div>
-          <p>Clothing</p>
-          <a href="/clothing">Shop now</a>
-        </div>
-      </section>
-
+      <main>
       <section id="recommended-products">
         <h1>
           Recommended Products
