--- a/index.html
+++ b/index.html
@@ -1,158 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inconsistent Product Page</title>
-    <link rel="stylesheet" href="src/style.css" />
-    <link rel="stylesheet" href="src/css/navbar.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="src/main.js" defer></script>
-  </head>
-  <body>
-    <header class="topNav">
-      <img class="logo" src="src/logo.png" alt="Nozama Logo">
-      <nav class="navbar">
-        <div class="navbar-items">
-          <a href="/electronics">Electronics</a>
-          <a href="/jewellery">Jewellery</a>
-          <a href="/clothing">clothing</a>
-        </div>
-      </nav>
-    </header>
-      <main>
-      <section id="recommended-products">
-        <h1>
-          Recommended Products
-        </h1>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Inconsistent Product Page</title>
+  <link rel="stylesheet" href="src/style.css"/>
+  <link rel="stylesheet" href="src/css/navbar.css"/>
+  <script src="src/main.js" defer></script>
+</head>
+<body>
+<header class="topNav">
+  <img class="logo" src="src/logo.png" alt="Nozama Logo">
+  <nav>
+    <a href="/electronics">Electronics</a>
+    <a href="/jewellery">Jewellery</a>
+    <a href="/clothing">clothing</a>
+  </nav>
+</header>
+<main>
+  <section id="recommended-products">
+    <h1>Recommended Products</h1>
+    <div class="product">
+      <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" alt="Fjallraven Backpack"/>
+      <h2>Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops</h2>
+      <p>Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded
+        sleeve, your everyday</p>
+      <p>Price: $109.95</p>
+      <p>Rating: 3.9 (120 reviews)</p>
+    </div>
 
-        <div class="product">
-          <img
-            src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
-            alt=""
-          />
-          <h2>
-            Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
-          </h2>
-          <p>
-            Your perfect pack for everyday use and walks in the forest. Stash
-            your laptop (up to 15 inches) in the padded sleeve, your everyday
-          </p>
-          <p>Price: $109.95</p>
-          <p>Rating: 3.9 (120 reviews)</p>
-        </div>
+    <div class="product">
+      <img src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg" alt="Mens Slim Fit T-Shirt"/>
+      <h2>Mens Casual Premium Slim Fit T-Shirts</h2>
+      <p>Slim-fitting style, contrast raglan long sleeve...</p>
+      <p>Price: $22.3</p>
+      <p>Rating: 4.1 (259 reviews)</p>
+    </div>
 
-        <div class="product">
-          <img
-            src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
-            alt=""
-          />
-          <h2>
-            Mens Casual Premium Slim Fit T-Shirts
-          </h2>
-          <p>Slim-fitting style, contrast raglan long sleeve...</p>
-          <p>Price: $22.3</p>
-          <p>Rating: 4.1 (259 reviews)</p>
-        </div>
+    <div class="product">
+      <img src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg" alt="Mens Cotton Jacket"/>
+      <h2>Mens Cotton Jacket</h2>
+      <p>Great outerwear jackets for Spring/Autumn/Winter...</p>
+      <p>Price: $55.99</p>
+      <p>Rating: 4.7 (500 reviews)</p>
+    </div>
 
-        <div class="product">
-          <img
-            src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"
-            alt="Mens Cotton Jacket"
-          />
-          <h2>Mens Cotton Jacket</h2>
-          <p>
-            Great outerwear jackets for Spring/Autumn/Winter...
-          </p>
-          <p>Price: $55.99</p>
-          <p>Rating: 4.7 (500 reviews)</p>
-        </div>
+    <div class="product">
+      <img src="https://fakestoreapi.com/img/71YXzeOuslL._AC_UY879_.jpg" alt="Mens Slim Fit T-Shirt"/>
+      <h2>Mens Casual Slim Fit</h2>
+      <p>The color could be slightly different...</p>
+      <p>Price: $15.99</p>
+      <p>Rating: 2.1 (430 reviews)</p>
+    </div>
 
-        <div class="product">
-          <img
-            src="https://fakestoreapi.com/img/71YXzeOuslL._AC_UY879_.jpg"
-            alt=""
-          />
-          <h2>Mens Casual Slim Fit</h2>
-          <p>
-            The color could be slightly different...
-          </p>
-          <p>Price: $15.99</p>
-          <p>Rating: 2.1 (430 reviews)</p>
-        </div>
+    <div class="product">
+      <img src="https://fakestoreapi.com/img/71pWzhdJNwL._AC_UL640_QL65_ML3_.jpg" alt="Naga Bracelet"/>
+      <h2>John Hardy Women's Legends Naga Bracelet</h2>
+      <p>From our Legends Collection, the Naga was inspired by the mythical water dragon...</p>
+      <p>Price: $695</p>
+      <p>Rating: 4.6 (400 reviews)</p>
+    </div>
+  </section>
 
-        <div class="product">
-          <img
-            src="https://fakestoreapi.com/img/71pWzhdJNwL._AC_UL640_QL65_ML3_.jpg"
-            alt=""
-          />
-          <h2>
-            John Hardy Women's Legends Naga Bracelet
-          </h2>
-          <p>
-            From our Legends Collection, the Naga was inspired by the mythical
-            water dragon...
-          </p>
-          <p>Price: $695</p>
-          <p>Rating: 4.6 (400 reviews)</p>
-        </div>
-      </section>
+  <section id="faq">
+    <h2>Frequently Asked Questions</h2>
+    <div class="faq-item">
+      <h3>What is the return policy?</h3>
+      <p>We offer a 30-day return policy. Please ensure the item is in its original condition.</p>
+    </div>
 
-      <section id="faq">
-        <h2>
-          Frequently Asked Questions
-        </h2>
-      </section>
-        <div class="accordion" id="accordionExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                What is the return policy?
-              </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <p>
-                  We offer a 30-day return policy. Please ensure the item is in its
-                  original condition.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                How long does shipping take?
-              </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <p>
-                  Shipping typically takes 5-7 business days. Expedited options are
-                  available at checkout.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Do you offer international shipping?
-              </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <p>
-                  You can reach us at
-                  <a href="mailto:support@example.com"
-                  >support@example.com</a
-                  >.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-    </main>
-  </body>
+    <div class="faq-item">
+      <h3>How long does shipping take?</h3>
+      <p>Shipping typically takes 5-7 business days. Expedited options are available at checkout.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Do you offer international shipping?</h3>
+      <p>You can reach us at <a href="mailto:support@example.com">support@example.com</a>.</p>
+    </div>
+  </section>
+</main>
+</body>
 </html>
