--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="topNav">
-  <img class="logo" src="src/logo.png" alt="Nozama Logo">
+  <h1>Nozama</h1>
   <nav>
     <a href="/electronics">Electronics</a>
     <a href="/jewellery">Jewellery</a>
