--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="product">
       <img src="https://fakestoreapi.com/img/71YXzeOuslL._AC_UY879_.jpg" alt="Mens Slim Fit T-Shirt"/>
       <h2>Mens Casual Slim Fit</h2>
-      <p>The color could be slightly different...</p>
+      <p>The colour could be slightly different...</p>
       <p>Price: $15.99</p>
       <p>Rating: 2.1 (430 reviews)</p>
     </div>
